background filter, styling

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "radium": "^0.25.1",
     "react": "^16.13.1",
+    "react-backdrop-filter": "^2.1.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
